# sequor

./: .gitignore  README.md  pyproject.toml  sequor.sh
src/sequor/: __init__.py
src/sequor/cli/: __init__.py  main.py
src/sequor/core/: __init__.py  artifacts.py  builder.py  cache.py  context.py  events.py  executor.py  flow.py  logger.py  models.py  processor.py  registry.py  runner.py  runner_summary.py  scheduler.py  states.py
src/sequor/io/: __init__.py  config_loader.py  yaml_parser.py
src/sequor/tasks/: __init__.py  bash_task.py  python_task.py  task_runtime.py
src/sequor/utils/: __init__.py  hashing.py  import_utils.py  paths.py
tests/: helpers.py  test_timeout_and_script_runtime.py
tutorial/: __init__.py
tutorial/rosetta_project/: README.md  __init__.py  cases.csv  jobs.py  mock_rosetta.py  pipeline.yaml  summarize.py
tutorial/rosetta_project/output/reports/: rosetta_summary.json  rosetta_summary.tsv
tutorial/rosetta_project/output/rosetta/case_a/: summary.json
tutorial/rosetta_project/output/rosetta/case_a/scores/: score.json
tutorial/rosetta_project/output/rosetta/case_b/: summary.json
tutorial/rosetta_project/output/rosetta/case_b/scores/: score.json
tutorial/upper_case/: README.md  __init__.py  jobs.py  pipeline.yaml  summarize.py
tutorial/upper_case/inputs/: sample_00.txt  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt
tutorial/upper_case/output/: summary.csv
tutorial/upper_case/output/upper/: sample_00.txt  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt
